--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<title>Are you a psychic</title>
-	<link rel="stylesheet" type="text/css" href="psystyle.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/psystyle.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="javascript" type="text.js" href="assets/javascript/game.js">
 	<title>Are you a psychic?</title>
 
 </head>
@@ -18,59 +20,7 @@
 	<p>Ready....Go!</p>
 </div>
 
-<script type="text/javascript">
-
-// Sets the computer choices 
-var computerChoices = ['a','b','c','d','e','d','e','f','g','h', 'i' ,'j' ,'k' ,'l', 'm' ,'n' ,'o' ,'p' ,'q' ,'r' ,'s' ,'t', 'u', 'v', 'w' ,'x' ,'y' ,'z'];
-
-// Declares the tallies to 0 
-var wins = 0;
-var attempts = 9;
-var losses = 0;
-var YourGuesses = 0;
-
-// When the user presses the key it records the keypress and then sets it to userguess
-document.onkeyup = function(event) {
-	var userGuess = String.fromCharCode(event.keyCode).toLowerCase();
-
-	// This sets the computer guess equal to the random.
-	var computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
-
-	// Making sure the user chooses r, p, or s
-	if (userGuess == computerGuess){
-			wins++, attempts = "9";
-		console.log("Awesome! Computer was thinking" + " " +computerGuess);
-		}
-	else {attempts --,
-			YourGuesses ++;}
-
-	if (attempts == 0){
-		attempts = "7", losses --;
-	}
-
-
-	if (losses == -10)
-		if (wins < 6) {
-		alert ('The stars have not aligned in your favor. Please refresh your browser if you want to try again');
-   }
-   else {alert ("You might be psychic but don't quit your day job");
-}
-
-		var html = "<p>guess my letter</p>" +
-		"<p>wins: " + 
-		wins + 
-		"</p>" +
-		"<p>losses: " + 
-		losses + 
-		"</p>" +
-		"<p>attempts: " + 
-		attempts + 
-		"</p>" +
-		"<p>YourGuesses: " +
-		YourGuesses;
-
-		// Placing the html into the game ID
-		document.querySelector('#game').innerHTML = html;}
+<script type="text/javascript" src="assets/javascript/game.js">
 
 </script>
 <footer> &copy; 2016 </footer>
